# three.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
site/: index.js  package-lock.json  package.json
src/: lib.rs
src/animation/: mod.rs
src/audio/: mod.rs
src/cameras/: mod.rs
src/core/: mod.rs
src/extras/: mod.rs
src/geometries/: mod.rs
src/helpers/: mod.rs
src/lights/: mod.rs
src/loaders/: mod.rs
src/materials/: mod.rs
src/math/: color.rs  mod.rs  vector.rs
src/objects/: mod.rs
src/renderers/: mod.rs
src/scenes/: mod.rs
src/textures/: mod.rs
tests/: README.md
