[package]
name = "three_rs"
version = "0.1.0"
edition = "2021"
authors = ["Snowapril <sinjihng@gmail.com>"]
description = "Rust-based three.js implementation using wasm + webgpu"
license = "MIT"
repository = "https://github.com/Snowapril/three.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
phf = { version = "0.9", features = ["macros"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]